# llm_energy_consumption_consultant

./: .gitignore  app.py  pyproject.toml  requirements.txt
pages/: Datenschutz.py  Impressum.py
src/: email_sender.py  extractor.py  image_utils.py  models.py  pdf_handler.py  supabase_client.py  tariff_calculator.py
tariffs/: sample_tariffs.json
tests/: test_extractor.py  test_models.py  test_tariff_calculator.py
